--- a/Notes/package.json
+++ b/Notes/package.json
@@ -10,8 +10,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/stack": "^6.3.1",
     "react": "17.0.2",
-    "react-native": "0.68.5"
+    "react-native": "0.68.5",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "^2.6.1",
+    "react-native-reanimated": "^2.10.0",
+    "react-native-safe-area-context": "^4.3.4",
+    "react-native-screens": "^3.17.0",
+    "react-native-vector-icons": "^9.1.0",
+    "realm": "^12.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
